# docat

./: .gitignore  Cargo.toml  release
src/: cmd.rs  config.rs  docat.rs  docker.rs  file.rs  git.rs  main.rs  service.rs
src/config/: app.rs  app_config.rs  config.rs  project.rs
