[package]
name = "docat"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.62", features = ["backtrace"] }
clap = { version = "3.2.17", features = ["derive"] }
dialoguer = "0.10.2"
dirs = "4.0.0"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_with = "2.0.0"
serde_yaml = "0.9.10"
shellwords = "1.1.0"
